--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,9 +13,9 @@
 <![endif]-->
 
 <!-- Le styles -->
-<link href="{{ site.BASE_PATH }}/assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}assets/css/style.css" rel="stylesheet">
 
 <!-- Le fav and touch icons -->
 <!-- Update these with your own images
