--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
-	<a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">
+	<a href="{% if site.BASE_PATH %}{{ site.BASE_PATH }}{% else %}/{% endif %}">
 		<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
 	</a>
 	<h3 class="title">
-        <a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">{{ site.title }}</a>
+        <a href="{% if site.BASE_PATH %}{{ site.BASE_PATH }}{% else %}/{% endif %}">{{ site.title }}</a>
     </h3>
 </header>
 
