--- a/_includes/post.html
+++ b/_includes/post.html
@@ -15,7 +15,9 @@
 	   {% endcase %}
 	   {{ page.date | date: "%Y" }}
 	 </span>
+	  <div class="article_body">
 	  {{ content }}
+	  </div>
 
 		{% unless page.categories == empty %}
 		<ul class="tag_box list-unstyled list-inline">
