syntax highlighter: google-code-prettify added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
 <link href="{{ site.BASE_PATH }}assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link href="{{ site.BASE_PATH }}assets/css/style.css" rel="stylesheet">
 
+<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 <!-- Le fav and touch icons -->
 <!-- Update these with your own images
 <link rel="shortcut icon" href="images/favicon.ico">
