--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
 <footer>
  <hr/>
  <p>
- 	&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-   Jekyll. Theme: <a href="https://github.com/dbtek/dbyll">dbyll</a> by dbtek.
+ 	&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} with Jekyll. Theme: <a href="https://github.com/dbtek/dbyll">dbyll</a> by dbtek.
  </p>
 </footer>
 
