syntax highlighting changed to pygments. Posts formatted.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,9 @@
 <!-- Le styles -->
 <link href="{{ site.BASE_PATH }}assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="{{ site.BASE_PATH }}assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}assets/resources/syntax/syntax.css" rel="stylesheet">
 <link href="{{ site.BASE_PATH }}assets/css/style.css" rel="stylesheet">
 
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 <!-- Le fav and touch icons -->
 <!-- Update these with your own images
 <link rel="shortcut icon" href="images/favicon.ico">
