Use  snaptortoise/jekyll-rss-feeds to generate an RSS feed for the blog
See https://github.com/snaptortoise/jekyll-rss-feeds

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,4 +26,6 @@
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 -->
 
+ <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.full_url }}/feed.xml">
+
 <! -- header.html end -->
