--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,10 +13,10 @@
 <![endif]-->
 
 <!-- Le styles -->
-<link href="{{ site.BASE_PATH }}assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="{{ site.BASE_PATH }}assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-<link href="{{ site.BASE_PATH }}assets/resources/syntax/syntax.css" rel="stylesheet">
-<link href="{{ site.BASE_PATH }}assets/css/style.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}/assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
+<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 
 <!-- Le fav and touch icons -->
 <!-- Update these with your own images
@@ -26,6 +26,6 @@
 <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 -->
 
- <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.full_url }}/feed.xml">
+ <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
 
 <! -- header.html end -->
