--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
-	<a href="{% if site.BASE_PATH %}{{ site.BASE_PATH }}{% else %}/{% endif %}">
+	<a href="{{ site.BASE_PATH }}/">
 		<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
 	</a>
 	<h3 class="title">
-        <a href="{% if site.BASE_PATH %}{{ site.BASE_PATH }}{% else %}/{% endif %}">{{ site.title }}</a>
+        <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
     </h3>
 </header>
 
@@ -55,8 +55,8 @@
 		{% endif %}
 		{% if site.author.resume %}
 		<li>
-			<a class="btn btn-default btn-sm" href="{{ site.author.resume }}">
-				<i class="fa fa-file fa-lg"></i>
+			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
+				<i class="fa fa-rss fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
