assets url update

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -37,9 +37,9 @@
 		  <!-- Collect the nav links, forms, and other content for toggling -->
 		  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-			  <li class="active"><a href="{{ site.BASE_PATH }}">Home</a></li>
-			  <li><a href="{{ site.BASE_PATH}}{{ site.categories_path }}">Categories</a></li>
-  			  <li><a href="{{ site.BASE_PATH}}{{ site.tags_path }}">Tags</a></li>
+			  <li class="active"><a href="{{ site.BASE_PATH }}/">Home</a></li>
+			  <li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}">Categories</a></li>
+  			  <li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">Tags</a></li>
 			</ul>
 		  </div><!-- /.navbar-collapse -->
 		</nav>
@@ -56,9 +56,9 @@
 		</div>
 
     
-	<script type="text/javascript" src="{{ site.BASE_PATH }}assets/resources/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="{{ site.BASE_PATH }}assets/resources/bootstrap/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="{{ site.BASE_PATH }}assets/js/app.js"></script>
+	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/app.js"></script>
 	<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-7715423-15']);
