base_path fixes. are there nay  more?

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -28,7 +28,7 @@
 		      <i class="fa fa-envelope"></i>
 		    </a>
 		    {% endif %}
-			<a class="navbar-brand" href="{{ site.BASE_PATH }}">
+			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
 				<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=35" class="img-circle" />
 				{{ site.title }}
 			</a>
