dropdown nav-menu added!

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -44,6 +44,20 @@
 		  </div><!-- /.navbar-collapse -->
 		</nav>
 
+       <!-- nav-menu-dropdown -->
+       <div class="btn-group hidden-xs" id="nav-menu">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-bars"></i>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#"><i class="fa fa-arrow-up"></i> Top of Page</a></li>
+            <li class="divider"></li>
+            <li><a href="{{ site.BASE_PATH}}/"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i> Categories</a></li>
+            <li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i> Tags</a></li
+          </ul>
+       </div>
+
 		<div class="col-sm-3 sidebar hidden-xs">
 			{% include sidebar.html %}
 		</div>
