--- a/_includes/default.html
+++ b/_includes/default.html
@@ -50,11 +50,11 @@
             <i class="fa fa-bars"></i>
           </button>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#"><i class="fa fa-arrow-up"></i> Top of Page</a></li>
-            <li class="divider"></li>
             <li><a href="{{ site.BASE_PATH}}/"><i class="fa fa-home"></i> Home</a></li>
             <li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}"><i class="fa fa-folder"></i> Categories</a></li>
-            <li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i> Tags</a></li
+            <li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}"><i class="fa fa-tags"></i> Tags</a></li>
+              <li class="divider"></li>
+            <li><a href="#"><i class="fa fa-arrow-up"></i> Top of Page</a></li>
           </ul>
        </div>
 
