-- Add disquss comments (4)

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -70,6 +70,8 @@
 
 		<hr>
 
+		{% if page.comments %} {% include comments.html %} {% endif %}
+
 		<div>
       <section class="share col-sm-6">
         <h4 class="section-title">Share Post</h4>
