-- Add comments as include.

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -68,9 +68,8 @@
 		  {% assign tags_list = nil %}
 		</ul>
 		{% endunless %}  
-
+		{% include comments.html %}
 		<hr>
-
 		<div>
       <section class="share col-sm-6">
         <h4 class="section-title">Share Post</h4>
