--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body{
 	position: fixed;
 	top: 0px;
 	padding-top: 10%;
-	background-color: #2c3e50;
+	background-color: #b2b2b2;
 	color: #fff;
 }
 
