--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ article.home h4,
 article.home h5,
 article.home h6 {
 	font-family: 'Ubuntu', sans-serif;
-	color: #f2756a;
+	color: #6aa7f2;
 }
 
 article.home h1 a,
