--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,8 @@
 		{% if site.author.twitter %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
-				<i class="fa fa-twitter fa-lg"></i>
+		   <!-- <i class="fa fa-twitter fa-lg"></i> -->
+				<i class="fa fa-facebook fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
