--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,9 +23,9 @@
 			</a>
 		</li>
 		{% endif %}
-		{% if site.author.twitter %}
+		{% if site.author.facebook %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
+			<a class="btn btn-default btn-sm" href="https://facebook.com/{{ site.author.twitter }}">
 		   <!-- <i class="fa fa-twitter fa-lg"></i> -->
 				<i class="fa fa-facebook fa-lg"></i>
 			</a>
