--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
 		{% endif %}
 		{% if site.author.facebook %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://facebook.com/{{ site.author.twitter }}">
+			<a class="btn btn-default btn-sm" href="https://facebook.com/{{ site.author.facebook }}">
 		   <!-- <i class="fa fa-twitter fa-lg"></i> -->
 				<i class="fa fa-facebook fa-lg"></i>
 			</a>
