--- a/assets/css/_originalstyle.css
+++ b/assets/css/_originalstyle.css
@@ -1,19 +1,15 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 
 body{
-	/* color: #2c3e50; */
-	color: #DBF1AE;
-	background: #333333; !important
+	color: #2c3e50;
 }
 
 .sidebar {
 	position: fixed;
 	top: 0px;
 	padding-top: 10%;
-	/* background-color: #2c3e50; */
-	/* color: #fff; */
-	background-color: #DBF1AE;
-	color: #2B4F3E;
+	background-color: #2c3e50;
+	color: #fff;
 }
 
 .sidebar-header {
@@ -70,8 +66,7 @@ article .share .twitter:hover {
 	color: #CC2127;
 }
 #contact-list li:hover .fa-rss {
-	/* color: #e74c3c; */
-	color: #89CD4E;
+	color: #e74c3c;
 }
 article .share .facebook:hover {
 	color: #43609C;
@@ -87,8 +82,7 @@ article .share .gplus:hover {
 }
 
 .page-header {
-	/* color: #e74c3c; */
-	color: #89CD4E;
+	color: #e74c3c;
 	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
 }
 
@@ -123,23 +117,20 @@ article.home h4,
 article.home h5,
 article.home h6 {
 	font-family: 'Ubuntu', sans-serif;
-	/* color: #f2756a; */
-	color: #ffffff;
+	color: #f2756a;
 }
 
 article.home h1 a,
 article.home h2 a,
 article.home h3 a,
 article.home h4 a {
-	/* color: #f2756a; */
-	color: #ffffff;
+	color: #f2756a;
 }
 article.home h1 a:hover,
 article.home h2 a:hover,
 article.home h3 a:hover,
 article.home h4 a:hover {
-	/* color: #e74c3c; */
-	color: #89CD4E;
+	color: #e74c3c;
 }
 
 .author .author-image {
