--- a/_includes/default.html
+++ b/_includes/default.html
@@ -59,7 +59,7 @@
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="\assets\icons\android-chrome-36x36.png" class="img-circle" />
+				<img src="/assets/icons/android-chrome-36x36.png" class="img-circle" />
 				{{ site.title }}
 			</a>
 		</div>
