--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,9 +110,10 @@ article{
 article {
 	padding: 0 5% 0;
 }
-
-article.home div a, article.home pre a { color: #2c3e50; }
-article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
+/* article.home div a, article.home pre a { color: #2c3e50; } */
+/* article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; } */
+article.home div a, article.home pre a { color: #89CD4E; }
+article.home div a:hover, article.home pre a:hover { color: #89CD4E; text-decoration: none; }
 article img { max-width: 100%; }
 
 h1,h2,h3,h4,h5,h6 { font-family: 'Ubuntu', sans-serif; }
