--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ btn {
 	padding-top: 10%;
 	/* background-color: #2c3e50; */
 	/* color: #fff; */
-	background-color: #DBF1AE;
+	background-color: #89CD4E;
 	color: #2B4F3E;
 }
 
