Fixing btn visibility
Try bootstrap-overrides trick, as per
http://stackoverflow.com/questions/20721248/best-way-to-override-bootstrap-css

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -59,8 +59,8 @@
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
 </head>
-<body>
-<!-- body id = "bootstrap-overrides" -->
+<!-- <body> -->
+<body id = "bootstrap-overrides">
 	<!-- Can assign arbitrary ID to make it easier to override bootstrap with custom styles in style.css -->
 	<nav class="navbar navbar-default visible-xs" role="navigation">
 		<!-- Brand and toggle get grouped for better mobile display -->
