--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
 	background: #333333; !important
 }
 
-#bootstrap-overrides btn {
+#btn {
 	/* color: #2B4F3E; */
 	color: #333333;
 	font-weight: bold;
