--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@ body{
 
 #btn {
 	/* color: #2B4F3E; */
-	color: #333333;
-	font-weight: bold;
+	color: #333333; !important
+	font-weight: bold; !important
 }
 
 .sidebar {
