--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,10 @@ body{
 	background: #333333; !important
 }
 
-#btn {
+btn {
 	/* color: #2B4F3E; */
-	color: #333333; !important
-	font-weight: bold; !important
+	color: #333333 !important;
+	font-weight: bold !important;
 }
 
 .sidebar {
