Sidebar to match avatar image
Strongly consider changing colours in avatar image to match theme... but
this will do for now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,8 @@ body{
 	padding-top: 10%;
 	/* background-color: #2c3e50; */
 	/* color: #fff; */
-	background-color: #89CD4E;
-	color: #2B4F3E;
+	background-color: #046A81;
+	color: #D8F0F4;
 }
 
 .sidebar-header {
