Changing button text colour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body{
 }
 
 .btn {
-	/* color: #2B4F3E; */
-	color: #333333 !important;
+	/* color: #2B4F3E; #89CD4E; 046A81;*/
+	color: #89CD4E !important;
 	font-weight: bold !important;
 }
 
