--- a/_includes/default.html
+++ b/_includes/default.html
@@ -88,7 +88,7 @@
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
 				<img src="/assets/icons/android-chrome-36x36.png" class="img-circle" />
-				{{ site.title }}
+				{{ title }}
 			</a>
 		</div>
 
