--- a/_includes/default.html
+++ b/_includes/default.html
@@ -87,7 +87,7 @@
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="/assets/icons/android-chrome-36x36.png" class="img-circle" />dafuloth.me
+				<img src="/assets/icons/android-chrome-36x36.png" class="img-circle" />&nbsp;dafuloth.me
 				<!-- originally  site.title -->
 			</a>
 		</div>
