--- a/_includes/default.html
+++ b/_includes/default.html
@@ -61,8 +61,10 @@
 </head>
 <!-- <body> -->
 <body id = "bootstrap-overrides">
-	<!-- Can assign arbitrary ID to make it easier to override bootstrap with custom styles in style.css -->
-	<nav class="navbar navbar-default visible-xs" role="navigation">
+	<!-- Can try assigning arbitrary ID to make it easier to override bootstrap with custom styles in style.css -->
+	<!-- <nav class="navbar navbar-default visible-xs" role="navigation"> -->
+	
+	<nav class="navbar navbar-inverse visible-xs" role="navigation">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
