CSS Selector Experiment 2
Will body bg colour stay without !important?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 body{
 	/* color: #2c3e50; */
 	color: #DBF1AE;
-	background: #333333 !important;
+	background: #333333;
 }
 
 ul li span.page_number {
