--- a/_includes/default.html
+++ b/_includes/default.html
@@ -64,7 +64,7 @@
 	<!-- Can try assigning arbitrary ID to make it easier to override bootstrap with custom styles in style.css -->
 	<!-- <nav class="navbar navbar-default visible-xs" role="navigation"> -->
 	
-	<nav class="navbar navbar-inverse visible-xs" role="navigation">
+	<nav class="navbar navbar-inverse navbar-fixed-top visible-xs" role="navigation">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
