--- a/_includes/post.html
+++ b/_includes/post.html
@@ -106,6 +106,11 @@
 		  {% else %}
 		  <li class="previous disabled"><a>&larr; Previous</a></li>
 		  {% endif %}
+		  
+		<li>
+			<span class="page_number"><a class="btn btn-link" href="/"><i class="fa fa-home"></i>&nbsp;Home</a></span>
+		</li>
+		  
 		  {% if page.next %}
 		  <li class="next"><a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
 		  {% else %}
